--- a/styles.qss
+++ b/styles.qss
@@ -8,7 +8,8 @@ QWidget#Sidebar_QWidget {
     border-bottom-left-radius: 10px;
 }
 
-QPushButton#Main_Button, QPushButton#Log_Button, QPushButton#min_Button, QPushButton#max_Button, QPushButton#quit_Button, QPushButton#Tool_Button, QPushButton#Setting_Button, QPushButton#Folder_Button {
+QPushButton#Main_Button, QPushButton#Log_Button, QPushButton#min_Button, QPushButton#max_Button, QPushButton#quit_Button, QPushButton#Tool_Button,
+QPushButton#Setting_Button, QPushButton#Folder_Button, QPushButton#Regress_Button, QPushButton#VideoState_Button, QPushButton#Forward_Button, QPushButton#VideoClose_Button {
     border: none;
     background: none;
 }
