--- a/GUI.ui
+++ b/GUI.ui
@@ -29,6 +29,9 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <layout class="QGridLayout" name="gridLayout">
     <property name="leftMargin">
      <number>18</number>
@@ -318,57 +321,8 @@
               <string>图像功能</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_9">
-              <item row="0" column="2">
-               <widget class="QPushButton" name="pushButton_8">
-                <property name="text">
-                 <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="0">
-               <widget class="QPushButton" name="pushButton_4">
-                <property name="text">
-                 <string>计算物品高度</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="0">
-               <widget class="QPushButton" name="pushButton_20">
-                <property name="text">
-                 <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="1">
-               <widget class="QPushButton" name="pushButton_21">
-                <property name="text">
-                 <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1">
-               <widget class="QPushButton" name="pushButton_6">
-                <property name="text">
-                 <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="3">
-               <widget class="QPushButton" name="pushButton_23">
-                <property name="text">
-                 <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="3">
-               <widget class="QPushButton" name="pushButton_9">
-                <property name="text">
-                 <string>PushButton</string>
-                </property>
-               </widget>
-              </item>
               <item row="1" column="2">
-               <widget class="QPushButton" name="pushButton_22">
+               <widget class="QPushButton" name="pushButton_23">
                 <property name="text">
                  <string>PushButton</string>
                 </property>
@@ -388,17 +342,45 @@
                 </property>
                </widget>
               </item>
-              <item row="2" column="2">
-               <widget class="QPushButton" name="pushButton_26">
+              <item row="1" column="1">
+               <widget class="QPushButton" name="pushButton_21">
                 <property name="text">
                  <string>PushButton</string>
                 </property>
                </widget>
               </item>
-              <item row="2" column="3">
+              <item row="2" column="2">
                <widget class="QPushButton" name="pushButton_27">
                 <property name="text">
                  <string>PushButton</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="0">
+               <widget class="QPushButton" name="pushButton_20">
+                <property name="text">
+                 <string>PushButton</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="2">
+               <widget class="QPushButton" name="pushButton_9">
+                <property name="text">
+                 <string>PushButton</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QPushButton" name="pushButton_6">
+                <property name="text">
+                 <string>PushButton</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="0">
+               <widget class="QPushButton" name="pushButton_4">
+                <property name="text">
+                 <string>计算物品高度</string>
                 </property>
                </widget>
               </item>
@@ -503,51 +485,6 @@
               <string>通讯功能</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_5">
-              <item row="3" column="2">
-               <widget class="QPushButton" name="pushButton_13">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="3">
-               <widget class="QPushButton" name="pushButton_14">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="1">
-               <widget class="QPushButton" name="SendBin_Edit">
-                <property name="text">
-                 <string>发送Bin信息</string>
-                </property>
-               </widget>
-              </item>
-              <item row="3" column="0">
-               <widget class="QPushButton" name="SendHex_Button">
-                <property name="text">
-                 <string>发送Hex信息</string>
-                </property>
-               </widget>
-              </item>
-              <item row="1" column="0" colspan="4">
-               <widget class="QLineEdit" name="ZigBee_Edit"/>
-              </item>
-              <item row="4" column="0">
-               <widget class="QPushButton" name="pushButton_10">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
-              <item row="4" column="3">
-               <widget class="QPushButton" name="pushButton_15">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
               <item row="2" column="0" colspan="3">
                <spacer name="horizontalSpacer">
                 <property name="orientation">
@@ -560,6 +497,20 @@
                  </size>
                 </property>
                </spacer>
+              </item>
+              <item row="3" column="2">
+               <widget class="QPushButton" name="pushButton_13">
+                <property name="text">
+                 <string/>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="2">
+               <widget class="QPushButton" name="pushButton_12">
+                <property name="text">
+                 <string/>
+                </property>
+               </widget>
               </item>
               <item row="0" column="0" colspan="4">
                <widget class="QLabel" name="label_9">
@@ -574,32 +525,15 @@
                 </property>
                </widget>
               </item>
-              <item row="5" column="0">
-               <spacer name="verticalSpacer">
-                <property name="orientation">
-                 <enum>Qt::Vertical</enum>
-                </property>
-                <property name="sizeHint" stdset="0">
-                 <size>
-                  <width>20</width>
-                  <height>40</height>
-                 </size>
-                </property>
-               </spacer>
-              </item>
-              <item row="4" column="2">
-               <widget class="QPushButton" name="pushButton_12">
-                <property name="text">
-                 <string/>
-                </property>
-               </widget>
-              </item>
               <item row="4" column="1">
                <widget class="QPushButton" name="pushButton_11">
                 <property name="text">
                  <string/>
                 </property>
                </widget>
+              </item>
+              <item row="1" column="0" colspan="4">
+               <widget class="QLineEdit" name="ZigBee_Edit"/>
               </item>
               <item row="2" column="3">
                <widget class="QPushButton" name="SendChar_Button">
@@ -608,8 +542,67 @@
                 </property>
                </widget>
               </item>
+              <item row="3" column="1">
+               <widget class="QPushButton" name="SendBin_Edit">
+                <property name="text">
+                 <string>发送Bin信息</string>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="3">
+               <widget class="QPushButton" name="pushButton_15">
+                <property name="text">
+                 <string/>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QPushButton" name="SendHex_Button">
+                <property name="text">
+                 <string>发送Hex信息</string>
+                </property>
+               </widget>
+              </item>
+              <item row="3" column="3">
+               <widget class="QPushButton" name="pushButton_14">
+                <property name="text">
+                 <string/>
+                </property>
+               </widget>
+              </item>
+              <item row="4" column="0">
+               <widget class="QPushButton" name="pushButton_10">
+                <property name="text">
+                 <string/>
+                </property>
+               </widget>
+              </item>
              </layout>
             </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="2">
+         <widget class="QGroupBox" name="groupBox_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="title">
+           <string>URL目标</string>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <widget class="QLineEdit" name="Url_Edit"/>
            </item>
           </layout>
          </widget>
@@ -694,24 +687,6 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0" colspan="6">
-            <widget class="QWidget" name="Video_Widget" native="true">
-             <layout class="QGridLayout" name="gridLayout_10">
-              <property name="leftMargin">
-               <number>0</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>0</number>
-              </property>
-              <property name="bottomMargin">
-               <number>0</number>
-              </property>
-             </layout>
-            </widget>
-           </item>
            <item row="1" column="3">
             <widget class="QPushButton" name="VideoState_Button">
              <property name="sizePolicy">
@@ -774,6 +749,13 @@
              </property>
             </widget>
            </item>
+           <item row="1" column="0">
+            <widget class="QSlider" name="VideoTimer_Slider">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
            <item row="1" column="1">
             <widget class="QLabel" name="VideoTimer_Label">
              <property name="minimumSize">
@@ -802,36 +784,23 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QSlider" name="VideoTimer_Slider">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
+           <item row="0" column="0" colspan="6">
+            <widget class="QWidget" name="Video_Widget" native="true">
+             <layout class="QGridLayout" name="gridLayout_10">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+             </layout>
             </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="2">
-         <widget class="QGroupBox" name="groupBox_2">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>16777215</height>
-           </size>
-          </property>
-          <property name="title">
-           <string>URL目标</string>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout_2">
-           <item>
-            <widget class="QLineEdit" name="Url_Edit"/>
            </item>
           </layout>
          </widget>
@@ -882,9 +851,33 @@
         <height>0</height>
        </size>
       </property>
+      <property name="cursor">
+       <cursorShape>ArrowCursor</cursorShape>
+      </property>
+      <property name="mouseTracking">
+       <bool>false</bool>
+      </property>
+      <property name="tabletTracking">
+       <bool>false</bool>
+      </property>
+      <property name="acceptDrops">
+       <bool>false</bool>
+      </property>
+      <property name="accessibleName">
+       <string notr="true"/>
+      </property>
+      <property name="accessibleDescription">
+       <string notr="true"/>
+      </property>
+      <property name="layoutDirection">
+       <enum>Qt::LeftToRight</enum>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
        <property name="spacing">
-        <number>15</number>
+        <number>14</number>
        </property>
        <property name="leftMargin">
         <number>14</number>
@@ -899,6 +892,40 @@
         <number>9</number>
        </property>
        <item>
+        <widget class="QLabel" name="Head_QLabel">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>50</width>
+           <height>50</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="scaledContents">
+          <bool>true</bool>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
+         <property name="wordWrap">
+          <bool>false</bool>
+         </property>
+         <property name="openExternalLinks">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QPushButton" name="Main_Button">
          <property name="minimumSize">
           <size>
@@ -912,6 +939,12 @@
            <height>40</height>
           </size>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="layoutDirection">
+          <enum>Qt::LeftToRight</enum>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -920,6 +953,15 @@
            <width>40</width>
            <height>40</height>
           </size>
+         </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
+         <property name="default">
+          <bool>false</bool>
+         </property>
+         <property name="flat">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
@@ -936,6 +978,9 @@
            <width>40</width>
            <height>40</height>
           </size>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
           <string/>
@@ -961,6 +1006,9 @@
            <width>40</width>
            <height>40</height>
           </size>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
           <string/>
@@ -1000,6 +1048,9 @@
            <height>40</height>
           </size>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
          <property name="text">
           <string/>
          </property>
@@ -1024,6 +1075,9 @@
            <width>40</width>
            <height>40</height>
           </size>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
           <string/>
